--- a/index.html
+++ b/index.html
@@ -1,1 +1,458 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Resurfr — Built for Court Pros</title>
+<link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700;800;900&family=DM+Sans:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap" rel="stylesheet">
+<style>
+  :root {
+    --yellow: #C8E62B;
+    --yellow-light: #EEF9A0;
+    --yellow-dim: rgba(200,230,43,0.10);
+    --green: #1E4D35;
+    --green-mid: #2A6647;
+    --green-light: #4CAF80;
+    --white: #FFFFFF;
+    --off-white: #F5F7F2;
+    --light-gray: #EDF0E8;
+    --mid-gray: #C8D0C2;
+    --gray: #7A8A74;
+    --charcoal: #1A1F18;
+    --text: #1A1F18;
+    --text-soft: #5A6655;
+  }
+
+  *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
+  html { scroll-behavior: smooth; }
+
+  body {
+    font-family: 'DM Sans', sans-serif;
+    background: var(--white);
+    color: var(--text);
+    overflow-x: hidden;
+  }
+
+  nav {
+    position: fixed;
+    top: 0; left: 0; right: 0;
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 56px;
+    height: 68px;
+    background: rgba(255,255,255,0.92);
+    backdrop-filter: blur(16px);
+    border-bottom: 1px solid var(--light-gray);
+  }
+
+  .nav-logo {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    text-decoration: none;
+  }
+
+  .nav-logo-badge {
+    background: var(--yellow);
+    border-radius: 8px;
+    width: 34px; height: 34px;
+    display: flex; align-items: center; justify-content: center;
+    flex-shrink: 0;
+    transition: transform 0.2s;
+  }
+
+  .nav-logo:hover .nav-logo-badge { transform: rotate(-4deg); }
+
+  .nav-logo-wordmark {
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 24px;
+    font-weight: 900;
+    color: var(--charcoal);
+    letter-spacing: 0.5px;
+    line-height: 1;
+  }
+
+  .nav-links {
+    display: flex;
+    align-items: center;
+    gap: 36px;
+    list-style: none;
+  }
+
+  .nav-links a {
+    color: var(--text-soft);
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 500;
+    transition: color 0.2s;
+  }
+
+  .nav-links a:hover { color: var(--charcoal); }
+
+  .nav-cta {
+    background: var(--charcoal) !important;
+    color: white !important;
+    padding: 9px 22px;
+    border-radius: 7px;
+    font-weight: 600 !important;
+    font-size: 13px !important;
+    transition: background 0.2s !important;
+  }
+
+  .nav-cta:hover { background: var(--green) !important; }
+
+  .hero {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    padding: 130px 56px 80px;
+    background: var(--off-white);
+    position: relative;
+    overflow: hidden;
+  }
+
+  .hero::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background-image:
+      linear-gradient(var(--light-gray) 1px, transparent 1px),
+      linear-gradient(90deg, var(--light-gray) 1px, transparent 1px);
+    background-size: 48px 48px;
+    opacity: 0.6;
+  }
+
+  .hero::after {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background: radial-gradient(ellipse at 30% 50%, rgba(245,247,242,0) 30%, var(--off-white) 80%);
+  }
+
+  .hero-inner {
+    position: relative;
+    z-index: 2;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  .hero-eyebrow {
+    display: inline-flex;
+    align-items: center;
+    background: var(--yellow-dim);
+    border: 1px solid rgba(200,230,43,0.4);
+    border-radius: 4px;
+    padding: 5px 14px;
+    font-size: 11px;
+    font-weight: 700;
+    letter-spacing: 2.5px;
+    text-transform: uppercase;
+    color: var(--green);
+    margin-bottom: 24px;
+  }
+
+  .hero-title {
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: clamp(52px, 5.5vw, 76px);
+    font-weight: 900;
+    line-height: 0.95;
+    color: var(--charcoal);
+    margin-bottom: 24px;
+  }
+
+  .hero-title .accent { color: var(--green); }
+
+  .hero-sub {
+    font-size: 17px;
+    line-height: 1.7;
+    color: var(--text-soft);
+    max-width: 440px;
+    margin-bottom: 40px;
+  }
+
+  .hero-actions { display: flex; gap: 12px; align-items: center; }
+
+  .btn {
+    padding: 13px 28px;
+    border-radius: 7px;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    cursor: pointer;
+    border: none;
+    transition: all 0.2s;
+    text-decoration: none;
+    display: inline-block;
+  }
+
+  .btn-dark { background: var(--charcoal); color: white; }
+  .btn-dark:hover { background: var(--green); transform: translateY(-2px); }
+
+  .btn-outline {
+    background: transparent;
+    color: var(--text-soft);
+    border: 1.5px solid var(--mid-gray);
+  }
+
+  .btn-outline:hover { border-color: var(--charcoal); color: var(--charcoal); }
+
+  .hero-note {
+    font-size: 12px;
+    color: var(--mid-gray);
+    margin-top: 16px;
+  }
+
+  .hero-visual { position: relative; }
+
+  .court-diagram {
+    background: white;
+    border-radius: 16px;
+    border: 1px solid var(--light-gray);
+    padding: 32px;
+    box-shadow: 0 4px 40px rgba(0,0,0,0.06);
+  }
+
+  .court-diagram svg { width: 100%; height: auto; display: block; }
+
+  .float-pill {
+    position: absolute;
+    background: white;
+    border: 1px solid var(--light-gray);
+    border-radius: 10px;
+    padding: 12px 18px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.08);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .float-pill-1 { top: -16px; right: -16px; }
+  .float-pill-2 { bottom: -16px; left: -16px; }
+
+  .pill-dot { width: 10px; height: 10px; border-radius: 50%; flex-shrink: 0; }
+  .pill-dot-green { background: var(--green-light); }
+  .pill-dot-yellow { background: var(--yellow); }
+  .pill-label { font-size: 12px; font-weight: 600; color: var(--charcoal); white-space: nowrap; }
+  .pill-sub { font-size: 11px; color: var(--gray); }
+
+  .stats-band {
+    background: var(--charcoal);
+    padding: 28px 56px;
+    display: flex;
+    justify-content: center;
+    gap: 72px;
+    flex-wrap: wrap;
+  }
+
+  .stat-item { text-align: center; }
+
+  .stat-num {
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 38px;
+    font-weight: 900;
+    color: var(--yellow);
+    line-height: 1;
+  }
+
+  .stat-label-band {
+    font-size: 11px;
+    font-weight: 600;
+    color: rgba(255,255,255,0.4);
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    margin-top: 4px;
+  }
+
+  section {
+    padding: 100px 56px;
+    max-width: 1300px;
+    margin: 0 auto;
+  }
+
+  section.full-width { max-width: none; padding: 100px 56px; }
+
+  .section-eyebrow {
+    font-size: 11px;
+    font-weight: 700;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    color: var(--green);
+    margin-bottom: 14px;
+  }
+
+  .section-title {
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: clamp(36px, 3.5vw, 52px);
+    font-weight: 800;
+    line-height: 1.05;
+    color: var(--charcoal);
+    margin-bottom: 16px;
+  }
+
+  .section-sub { font-size: 16px; color: var(--text-soft); max-width: 500px; line-height: 1.7; }
+
+  .features-wrap {
+    background: var(--off-white);
+    border-top: 1px solid var(--light-gray);
+    border-bottom: 1px solid var(--light-gray);
+  }
+
+  .features-header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+    align-items: end;
+    margin-bottom: 64px;
+  }
+
+  .features-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1px;
+    background: var(--light-gray);
+    border: 1px solid var(--light-gray);
+    border-radius: 12px;
+    overflow: hidden;
+  }
+
+  .feature-card { background: var(--white); padding: 36px 32px; transition: background 0.2s; }
+  .feature-card:hover { background: #fafffe; }
+
+  .feature-icon-wrap {
+    width: 44px; height: 44px;
+    border-radius: 10px;
+    background: var(--off-white);
+    border: 1px solid var(--light-gray);
+    display: flex; align-items: center; justify-content: center;
+    margin-bottom: 20px;
+  }
+
+  .feature-icon-wrap svg {
+    width: 20px; height: 20px;
+    stroke: var(--green); fill: none;
+    stroke-width: 1.8; stroke-linecap: round; stroke-linejoin: round;
+  }
+
+  .feature-title {
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 20px; font-weight: 700;
+    margin-bottom: 10px; color: var(--charcoal);
+  }
+
+  .feature-desc { font-size: 14px; color: var(--text-soft); line-height: 1.7; }
+
+  .surfaces-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-top: 56px;
+  }
+
+  .surface-card {
+    border-radius: 12px; padding: 40px 32px;
+    border: 1px solid var(--light-gray); background: white;
+    transition: transform 0.2s, box-shadow 0.2s;
+    position: relative; overflow: hidden;
+  }
+
+  .surface-card:hover { transform: translateY(-4px); box-shadow: 0 12px 40px rgba(0,0,0,0.08); }
+
+  .surface-card::before {
+    content: ''; position: absolute;
+    top: 0; left: 0; right: 0; height: 4px;
+  }
+
+  .surface-card.hard::before { background: #D4A843; }
+  .surface-card.clay::before { background: #C4633A; }
+  .surface-card.hartru::before { background: var(--green-light); }
+
+  .surface-type-label {
+    display: inline-block;
+    font-size: 11px; font-weight: 700;
+    letter-spacing: 2px; text-transform: uppercase;
+    padding: 4px 12px; border-radius: 4px; margin-bottom: 20px;
+  }
+
+  .surface-card.hard .surface-type-label { background: #FDF3E0; color: #B8842A; }
+  .surface-card.clay .surface-type-label { background: #FDEEE8; color: #A84E2A; }
+  .surface-card.hartru .surface-type-label { background: #E8F5EE; color: var(--green); }
+
+  .surface-name {
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 32px; font-weight: 800;
+    color: var(--charcoal); margin-bottom: 12px;
+  }
+
+  .surface-detail { font-size: 14px; color: var(--text-soft); line-height: 1.7; margin-bottom: 24px; }
+
+  .surface-interval {
+    font-size: 12px; font-weight: 600; color: var(--gray);
+    padding-top: 20px; border-top: 1px solid var(--light-gray);
+  }
+
+  .surface-interval strong { color: var(--charcoal); }
+
+  .how-wrap { background: var(--charcoal); color: white; }
+  .how-wrap .section-eyebrow { color: var(--yellow); }
+  .how-wrap .section-title { color: white; }
+  .how-wrap .section-sub { color: rgba(255,255,255,0.5); }
+
+  .steps-grid {
+    display: grid; grid-template-columns: repeat(4, 1fr);
+    gap: 40px; margin-top: 64px;
+  }
+
+  .step-num {
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 72px; font-weight: 900;
+    color: rgba(255,255,255,0.06); line-height: 1; margin-bottom: 16px;
+  }
+
+  .step-bar { width: 32px; height: 3px; background: var(--yellow); border-radius: 2px; margin-bottom: 20px; }
+  .step-title { font-family: 'Barlow Condensed', sans-serif; font-size: 20px; font-weight: 700; color: white; margin-bottom: 10px; }
+  .step-desc { font-size: 14px; color: rgba(255,255,255,0.45); line-height: 1.7; }
+
+  .pricing-grid {
+    display: grid; grid-template-columns: 1fr 1.05fr 1fr;
+    gap: 20px; margin-top: 64px; align-items: start;
+  }
+
+  .pricing-card {
+    border-radius: 12px; padding: 36px 28px;
+    border: 1px solid var(--light-gray); background: white;
+    transition: box-shadow 0.2s, transform 0.2s;
+  }
+
+  .pricing-card:hover { box-shadow: 0 8px 32px rgba(0,0,0,0.08); transform: translateY(-2px); }
+
+  .pricing-card.featured {
+    background: var(--charcoal); border-color: var(--charcoal); transform: scale(1.02);
+  }
+
+  .featured-label {
+    display: inline-block; background: var(--yellow); color: var(--charcoal);
+    font-size: 10px; font-weight: 800; letter-spacing: 2px; text-transform: uppercase;
+    padding: 4px 12px; border-radius: 4px; margin-bottom: 20px;
+  }
+
+  .plan-name {
+    font-family: 'Barlow Condensed', sans-serif; font-size: 13px; font-weight: 700;
+    letter-spacing: 2.5px; text-transform: uppercase; color: var(--gray); margin-bottom: 16px;
+  }
+
+  .pricing-card.featured .plan-name { color: rgba(255,255,255,0.45); }
+
+  .plan-price {
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 60px; font-weight: 900; line-height: 1; color: var(--charcoal); margin-bottom: 4px;
+  }
+
+  .plan-price sup { font-size: 24px; font-weight: 600; vertical-align: top; margin-top: 12​​​​​​​​​​​​​​​​
 
