--- a/index.html
+++ b/index.html
@@ -455,4 +455,5 @@
   }
 
   .plan-price sup { font-size: 24px; font-weight: 600; vertical-align: top; margin-top: 12​​​​​​​​​​​​​​​​
-
+</body>
+</html>
