--- a/dashboard.html
+++ b/dashboard.html
@@ -331,6 +331,10 @@ const sb = createClient(
 
 let clients = [], jobs = [], invoices = [];
 
+  // Auth check — redirect to login if not signed in
+sb.auth.getSession().then(({ data: { session } }) => {
+  if (!session) window.location.href = '/login.html';
+});
 document.addEventListener('DOMContentLoaded', () => {
   document.getElementById('today-date').textContent = new Date().toLocaleDateString('en-US', {weekday:'long',month:'short',day:'numeric',year:'numeric'});
   loadAll();
