--- a/dashboard.html
+++ b/dashboard.html
@@ -329,8 +329,13 @@ const sb = createClient(
   'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InF5cmdrc3B3eGptYmpua2FpeGFnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzE5NzQ0NTgsImV4cCI6MjA4NzU1MDQ1OH0.AHE_1iR8De17u-bVwsfzPc0nKK8MCDB5SEU5Ks531DA'
 );
 
-let clients = [], jobs = [], invoices = [];
+// ── AUTH CHECK ──
+sb.auth.getSession().then(({ data: { session } }) => {
+  if (!session) window.location.href = '/login.html';
+});
 
+// ── STATE ──
+let clients = [], jobs = [], invoices = [];
   // Auth check — redirect to login if not signed in
 sb.auth.getSession().then(({ data: { session } }) => {
   if (!session) window.location.href = '/login.html';
