--- a/dashboard.html
+++ b/dashboard.html
@@ -321,9 +321,11 @@ const sb = createClient(
 );
 
 // Auth check — redirect to login if not signed in
-sb.auth.getSession().then(({ data: { session } }) => {
+// ── AUTH CHECK ──
+(async () => {
+  const { data: { session } } = await sb.auth.getSession();
   if (!session) window.location.href = '/login.html';
-});
+})();
 const sb = createClient(
   'https://qyrgkspwxjmbjnkaixag.supabase.co',
   'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InF5cmdrc3B3eGptYmpua2FpeGFnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzE5NzQ0NTgsImV4cCI6MjA4NzU1MDQ1OH0.AHE_1iR8De17u-bVwsfzPc0nKK8MCDB5SEU5Ks531DA'
