--- a/dashboard.html
+++ b/dashboard.html
@@ -174,6 +174,10 @@ body{font-family:'DM Sans',sans-serif;background:var(--off);color:var(--text);mi
       <svg viewBox="0 0 24 24"><rect x="3" y="4" width="18" height="18" rx="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
       Jobs
     </div>
+    <a class="nav-item" href="/map.html">
+  <svg viewBox="0 0 24 24"><circle cx="12" cy="10" r="3"/><path d="M12 2a8 8 0 0 0-8 8c0 5.4 7.05 11.5 7.65 12 .19.16.51.16.7 0C12.95 21.5 20 15.4 20 10a8 8 0 0 0-8-8z"/></svg>
+  Court Map
+</a>
     <div class="nav-label" style="margin-top:8px">Finance</div>
     <div class="nav-item" onclick="nav('invoices',this)">
       <svg viewBox="0 0 24 24"><rect x="1" y="4" width="22" height="16" rx="2"/><line x1="1" y1="10" x2="23" y2="10"/></svg>
